implement merge documents
