# server/src/controller/DocumentController.ts
@@ -1,14 +1,22 @@
 import { Request, Response } from 'express';
-import { DocumentService, IDocumentService, IStorageService } from '../service';
+import {
+  DocumentMergeService,
+  DocumentService,
+  IDocumentMergeService,
+  IDocumentService,
+  IStorageService
+} from '../service';
 import { storageFactory } from '../utils';
 
 class DocumentController {
   private readonly documentService: IDocumentService;
   private readonly storageService: IStorageService;
+  private readonly documentMergeService: IDocumentMergeService;
 
   constructor() {
     this.documentService = new DocumentService();
     this.storageService = storageFactory.getStorageService();
+    this.documentMergeService = new DocumentMergeService();
   }
 
   async getDocuments(_: Request, res: Response) {
@@ -120,6 +128,41 @@ class DocumentController {
       res.setHeader('Content-Type', document.contentType);
       res.setHeader('Content-Disposition', `attachment; filename=${document.fileName}`);
       res.send(file);
+    } catch (error) {
+      res.status(500).json({ error: error.message });
+    }
+  }
+
+  async mergeDocuments(req: Request, res: Response) {
+    try {
+      const { documentIds } = req.body;
+
+      if (!documentIds || documentIds.length < 2) {
+        res.status(400).json({ error: 'At least two document IDs are required' });
+        return;
+      }
+
+      const documents = [];
+
+      for (const id of documentIds) {
+        if (!id) {
+          throw new Error('Invalid document ID');
+        }
+        const document = await this.documentService.getDocumentById(id);
+        documents.push(document);
+      }
+
+      if (!documents || documents.length < 2) {
+        res.status(404).json({ error: 'Documents not found' });
+        return;
+      }
+
+      const mergedDocument = await this.documentMergeService.mergeDocuments(documents);
+
+      res.setHeader('Content-Type', 'application/pdf');
+      // TODO: Change filename
+      res.setHeader('Content-Disposition', `attachment; filename=merged.pdf`);
+      res.send(mergedDocument);
     } catch (error) {
       res.status(500).json({ error: error.message });
     }
