# server/src/routes/documentRoutes.ts
@@ -112,4 +112,27 @@ documentRouter.post('/:id/download', (req, res) => {
   documentController.downloadDocument(req, res);
 });
 
+documentRouter.post('/merge-documents', (req, res) => {
+  /* #swagger.tags = ['Documents']
+      #swagger.description = 'Endpoint to merge pdfs'
+      #swagger.parameters['documentIds'] = {
+        in: 'body',
+        required: true,
+        type: 'array',
+        description: 'The ids of the documents to merge',
+        items: {type: 'string'}
+      }
+      #swagger.responses[200] = {
+        description: 'Documents merged successfully'
+      }
+      #swagger.responses[400] = {
+        description: 'Bad request'
+      }
+      #swagger.responses[500] = {
+        description: 'Server error'
+      }
+    */
+  documentController.mergeDocuments(req, res);
+});
+
 export { documentRouter };
