# server/src/service/DocumentMerge/IDocumentMergeService.ts
@@ -1,0 +1,5 @@
+import { IDocument } from '../../models';
+
+export interface IDocumentMergeService {
+  mergeDocuments(documents: IDocument[]): Promise<Buffer>;
+}
