# server/src/swagger-output.json
@@ -137,6 +137,40 @@
           }
         }
       }
+    },
+    "/api/v1/documents/merge-documents": {
+      "post": {
+        "tags": [
+          "Documents"
+        ],
+        "description": "Endpoint to merge pdfs",
+        "parameters": [
+          {
+            "name": "documentIds",
+            "in": "body",
+            "required": true,
+            "description": "The ids of the documents to merge",
+            "items": {
+              "type": "string"
+            },
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Documents merged successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
     }
   }
 }
